# quickmt

./: .gitignore  Benchmark.ipynb  Demo.ipynb  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: training.md
docs/blogs/: libretranslate-vs-quickmt.json  quickmt-vs-libretranslate.qmd
docs/notebooks/: Benchmark.ipynb  DatasetToFiles.ipynb  Demo.ipynb  quickmt-backtranslation.ipynb  vllm-Aya-Expanse-8b-testing.ipynb  vllm-Hunyuan-MT-testing.ipynb
notebooks/: Benchmark.ipynb  Demo.ipynb  Testing.ipynb
quickmt/: __init__.py  app.py  clean.py  corpus_to_hf.py  eval.py  hub.py  langid.py  locustfile.py  manager.py  rest_server.py  settings.py  translator.py
quickmt/gui/static/: app.js  index.html  style.css
quickmt/scripts/: _brand.yml  app.py  clean.py  eval.py  m2m100_eval.py  nllb_eval.py  opusmt_eval.py  quickmt_app.py  static_filter.py
tests/: conftest.py  test_api.py  test_auto_translate.py  test_cache.py  test_identify_language.py  test_langid.py  test_langid_batch.py  test_langid_path.py  test_lru.py  test_manager.py  test_mixed_src.py  test_robustness.py  test_threading_config.py  test_translation_quality.py  test_translator.py
