[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project.urls]
"Homepage" = "https://github.com/quickmt/quickmt"
"Bug Tracker" = "https://github.com/quickmt/quickmt/issues"

[project]
name = "quickmt"
version = "0.1.0"
description = "A reasonably quick and reasonably accurate neural machine translation (NMT) system"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "QuickMT Team"},
]
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
quickmt-serve = "quickmt.rest_server:start"
quickmt-gui = "quickmt.rest_server:start_gui"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
dev = ["requirements-dev.txt"]

[tool.hatch.build.targets.wheel]
packages = ["quickmt"]
